--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "main": "src/mention/index.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/dmacfarlane/angular-mentions.git"
+    "url": "https://github.com/TetraInsights/angular-mentions"
   },
   "author": "Dan MacFarlane",
   "license": "MIT",
