--- a/Dockerfile.Dev
+++ b/Dockerfile.Dev
@@ -4,8 +4,8 @@ EXPOSE 4200
 
 WORKDIR /usr/src/app
 
-COPY ["package.json", "package-lock.json*", "yarn.lock*","./"]
+COPY ["package.json", "package-lock.json*","./"]
 
 # install app dependencies...
 RUN npm install
-RUN npm install -g @angular/cli@6.0.0
+RUN npm install -g @angular/cli@1.0.0
