--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,8 @@ services:
     volumes:
       - .:/usr/src/app
       - app_node_modules:/usr/src/app/node_modules
-    command: /bin/sh -c "ng serve --host=0.0.0.0" #command for developent environment
+    # command: /bin/sh -c "ng serve --host=0.0.0.0" #command for developent environment
+    command: /bin/sh -c "tail -f /dev/null" #command for developent environment
     
 volumes:
   app_node_modules:
