--- a/package.json
+++ b/package.json
@@ -26,21 +26,19 @@
     "install": "npm run dist"
   },
   "private": false,
-  "peerDependencies": {
-    "@angular/common": ">=4.0.0",
-    "@angular/core": ">=4.0.0"
-  },
+  "peerDependencies": {},
   "devDependencies": {
-    "@angular/cli": "^1.0.0",
-    "@angular/common": "^5.2.11",
-    "@angular/compiler": "^5.2.11",
-    "@angular/compiler-cli": "^5.2.11",
-    "@angular/core": "^5.2.11",
-    "@angular/forms": "^5.2.11",
-    "@angular/http": "^5.2.11",
-    "@angular/platform-browser": "^5.2.11",
-    "@angular/platform-browser-dynamic": "^5.2.11",
-    "@angular/router": "^5.2.11",
+    "@angular-devkit/build-angular": "~0.8.0",
+    "@angular/cli": "^6.2.9",
+    "@angular/common": "^6.1.10",
+    "@angular/compiler": "^6.1.10",
+    "@angular/compiler-cli": "^6.1.10",
+    "@angular/core": "^6.1.10",
+    "@angular/forms": "^6.1.10",
+    "@angular/http": "^6.1.10",
+    "@angular/platform-browser": "^6.1.10",
+    "@angular/platform-browser-dynamic": "^6.1.10",
+    "@angular/router": "^6.1.10",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.60",
     "angular-in-memory-web-api": "^0.3.2",
@@ -55,17 +53,17 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.0",
-    "rxjs": "^5.5.12",
+    "rxjs": "^6.6.3",
     "ts-node": "~3.3.0",
     "tslint": "~4.5.0",
-    "typescript": "2.4.2",
+    "typescript": "2.9.2",
     "zone.js": "^0.8.4"
   },
   "files": [
     "src/mention"
   ],
   "dependencies": {
-    "@angular/animations": "^5.2.11",
-    "@angular/platform-server": "^5.2.11"
+    "@angular/animations": "^6.1.10",
+    "@angular/platform-server": "^6.1.10"
   }
 }
