--- a/package.json
+++ b/package.json
@@ -28,21 +28,21 @@
   "private": false,
   "peerDependencies": {},
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/cli": "^6.2.9",
-    "@angular/common": "^6.1.10",
-    "@angular/compiler": "^6.1.10",
-    "@angular/compiler-cli": "^6.1.10",
-    "@angular/core": "^6.1.10",
-    "@angular/forms": "^6.1.10",
-    "@angular/http": "^6.1.10",
-    "@angular/platform-browser": "^6.1.10",
-    "@angular/platform-browser-dynamic": "^6.1.10",
-    "@angular/router": "^6.1.10",
+    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular/cli": "^7.3.10",
+    "@angular/common": "^7.2.16",
+    "@angular/compiler": "^7.2.16",
+    "@angular/compiler-cli": "^7.2.16",
+    "@angular/core": "^7.2.16",
+    "@angular/forms": "^7.2.16",
+    "@angular/http": "^7.2.16",
+    "@angular/platform-browser": "^7.2.16",
+    "@angular/platform-browser-dynamic": "^7.2.16",
+    "@angular/router": "^7.2.16",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.60",
-    "angular-in-memory-web-api": "^0.3.2",
-    "codelyzer": "~2.0.0",
+    "angular-in-memory-web-api": "^0.8.0",
+    "codelyzer": "^4.5.0",
     "core-js": "~2.4.1",
     "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
@@ -56,14 +56,15 @@
     "rxjs": "^6.6.3",
     "ts-node": "~3.3.0",
     "tslint": "~4.5.0",
-    "typescript": "2.9.2",
+    "typescript": "3.2.4",
     "zone.js": "^0.8.4"
   },
   "files": [
     "src/mention"
   ],
   "dependencies": {
-    "@angular/animations": "^6.1.10",
-    "@angular/platform-server": "^6.1.10"
+    "@angular/animations": "^7.2.16",
+    "@angular/platform-server": "^7.2.16",
+    "tslib": "^1.9.0"
   }
 }
