--- a/package.json
+++ b/package.json
@@ -28,21 +28,20 @@
   "private": false,
   "peerDependencies": {},
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "^7.3.10",
-    "@angular/common": "^7.2.16",
-    "@angular/compiler": "^7.2.16",
-    "@angular/compiler-cli": "^7.2.16",
-    "@angular/core": "^7.2.16",
-    "@angular/forms": "^7.2.16",
-    "@angular/http": "^7.2.16",
-    "@angular/platform-browser": "^7.2.16",
-    "@angular/platform-browser-dynamic": "^7.2.16",
-    "@angular/router": "^7.2.16",
+    "@angular-devkit/build-angular": "~0.803.29",
+    "@angular/cli": "^8.3.29",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.60",
     "angular-in-memory-web-api": "^0.8.0",
-    "codelyzer": "^4.5.0",
+    "codelyzer": "^5.0.1",
     "core-js": "~2.4.1",
     "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
@@ -56,15 +55,15 @@
     "rxjs": "^6.6.3",
     "ts-node": "~3.3.0",
     "tslint": "~4.5.0",
-    "typescript": "3.2.4",
-    "zone.js": "^0.8.4"
+    "typescript": "3.5.3",
+    "zone.js": "~0.9.1"
   },
   "files": [
     "src/mention"
   ],
   "dependencies": {
-    "@angular/animations": "^7.2.16",
-    "@angular/platform-server": "^7.2.16",
+    "@angular/animations": "^8.2.14",
+    "@angular/platform-server": "^8.2.14",
     "tslib": "^1.9.0"
   }
 }
