Restructuring angular-mentions project.

--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,2 @@
-registry=https://npm.pkg.github.com/TetraInsights
+@tetrainsights:registry=https://npm.pkg.github.com
+//npm.pkg.github.com/:_authToken=${GITHUB_REGISTRY_PERSONAL_ACCES_TOKEN}
