--- a/Dockerfile.Dev
+++ b/Dockerfile.Dev
@@ -4,8 +4,8 @@ EXPOSE 4200
 
 WORKDIR /usr/src/app
 
-COPY ["package.json", "package-lock.json*","./"]
+COPY ["package.json", "yarn.lock*","./"]
 
 # install app dependencies...
-RUN npm install
-RUN npm install -g @angular/cli@9
+RUN yarn install
+RUN yarn global add @angular/cli@9
