--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "lib:package": "yarn build --prod && yarn copy:readme && yarn copy:npmrc && cd ./dist/angular-mentions && yarn pack"
   },
   "private": false,
-  "peerDependencies": {},
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.12",
+    "@angular-devkit/build-ng-packagr": "~0.901.12",
     "@angular/cli": "^9.1.12",
     "@angular/common": "^9.1.12",
     "@angular/compiler": "^9.1.12",
@@ -52,8 +53,9 @@
     "protractor": "~5.1.0",
     "rxjs": "^6.6.3",
     "ts-node": "~3.3.0",
-    "tslint": "~4.5.0",
+    "tslint": "^5.5.0",
     "typescript": "3.8.3",
+    "ng-packagr": "^9.0.0",
     "zone.js": "~0.10.2"
   },
   "files": [
