--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tetrainsights/angular-mentions",
-  "version": "9.1.2",
+  "version": "9.1.3",
   "description": "Angular mentions for text fields.",
   "keywords": [
     "angular",
@@ -22,6 +22,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "copy:readme": "cp README.md ./dist/angular-mentions",
+    "copy:npmrc": "cp .npmrc ./dist/angular-mentions",
     "lib:package": "yarn build --prod && yarn copy:readme && yarn copy:npmrc && cd ./dist/angular-mentions && yarn pack"
   },
   "private": false,
