--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-@tetrainsights:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=${GITHUB_REGISTRY_PERSONAL_ACCES_TOKEN}
+@tetra-insights:registry=https://npm.pkg.github.com
+//npm.pkg.github.com/:_authToken=${GITHUB_PAT}
