--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tetrainsights/angular-mentions",
+  "name": "@tetra-insights/angular-mentions",
   "version": "9.1.3",
   "description": "Angular mentions for text fields.",
   "keywords": [
@@ -10,7 +10,7 @@
   "main": "src/mention/index.ts",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/TetraInsights/angular-mentions"
+    "url": "git+https://github.com/Tetra-Insights/angular-mentions"
   },
   "author": "Dan MacFarlane",
   "license": "MIT",
@@ -24,7 +24,8 @@
     "e2e": "ng e2e",
     "copy:readme": "cp README.md ./dist/angular-mentions",
     "copy:npmrc": "cp .npmrc ./dist/angular-mentions",
-    "lib:package": "yarn build --prod && yarn copy:readme && yarn copy:npmrc && cd ./dist/angular-mentions && yarn pack"
+    "lib:package": "yarn build --prod && yarn copy:readme && yarn copy:npmrc",
+    "lib:publish":"cd ./dist/angular-mentions && yarn pack && yarn publish"
   },
   "private": false,
   "devDependencies": {
